--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,25 @@ h1 {
     margin: 10px auto;
 }
 
-.one {
-    background-color: red;
+.red {
+    background: linear-gradient(rgb(122, 74, 14), rgb(245, 62, 113), rgb(162, 27, 27));
 }
 
-.two {
-    background-color: green;
+.green {
+    background: linear-gradient( #55680D, #71F53E, #116C31);
 }
 
-.three {
-    background-color: blue;
+.blue {
+    background: linear-gradient(hsl(186, 76%, 16%), hsl(223, 90%, 60%), hsl(240, 56%, 42%));
+}
+
+.container {
+    background-color: rgb(255,255,255);
+    padding: 10px 0;
+}
+
+.sleeve {
+    width: 110px;
+    height: 25px;
+    background-color: white;
 }
